homepage/homepage.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage

  template:
    metadata:
      labels:
        app: homepage

    spec:
      containers:
      - name: homepage
#        image: asia-east1-docker.pkg.dev/homepage-431105/meow/homepage:28663bce
        image: asia-east1-docker.pkg.dev/homepage-431105/meow/homepage:d27960dd
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /api/health
            port: 3000
          initialDelaySeconds: 10
          timeoutSeconds: 5
        ports:
          - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
          - name: config
            mountPath: /app/.env.production.local
            subPath: .env.production.local
      volumes:
        - name: config
          configMap:
            name: homepage-config
      imagePullSecrets:
        - name: gcp-artifact-registry
---
apiVersion: v1
kind: Service
metadata:
  name: homepage-service
spec:
  selector:
    app: homepage
  ports:
    -
      name: http-port
      port: 80
      protocol: TCP
      targetPort: 3000
