homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: homepage-ip
    networking.gke.io/managed-certificates: meowalien-cert
spec:
  rules:
  - host: meowalien.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: homepage-service
            port:
              name: http-port
  - host: api.meowalien.com
    http:
      paths:
      - path: /i18n/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: i18n-service
            port:
              name: http-port
